--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
     justify-content: space-between;
     border-bottom: 1px solid #cccccc;/* cambia el color de la linea entre el header y el navbar*/
 }
-.navbar-blanco .logo { height: 40px; margin-left: 20px; } /* cambia tamaño y dirección del logo desarrollo web*/
+.navbar-blanco .logo { height: 80px; margin-left: 20px; } /* cambia tamaño y dirección del logo desarrollo web*/
 .navbar-blanco .logo-unpaz { height: 40px; margin-right: 20px; } /* cambia tamaño y dirección del logo UNPAZ */
 
 
@@ -197,3 +197,7 @@ p {
     transition: background-color 0.3s ease;
 }
 
+img[src="neddesarrollo.png"] {
+  width: 300px;
+  height: auto;
+}
